sun.misc.BASE64En/Decoder -> java.util.Base64 (and StandardCharsets.UTF)